--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -12,6 +12,12 @@
 .ui-widget {
     font-size:0.7em
 }
+.activeMenuItem {
+    border: 1px solid #8bd83b;
+    background: #4eb305 url("#{resource['primefaces-le-frog:images/ui-bg_highlight-soft_50_4eb305_1x100.png']}") 50% 50% repeat-x;
+    font-weight: normal;
+    color: #ffffff;
+}
 
 .green{
     color: #97BE0D
@@ -26,6 +32,10 @@ body{
     margin: 0 auto;
     vertical-align: middle;
     width: 920px
+}
+
+.frame{
+    margin-top: 20px;
 }
 .userStuff{
     float: right;
