--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -13,6 +13,15 @@
     text-decoration:none;
 }
 
+.header div a:hover{
+
+    text-decoration: underline;
+    background: #fafefb;
+    background: -webkit-linear-gradient(#e0e1e2,#fafefb);
+    background: -moz-linear-gradient(#e0e1e2, #fafefb);
+    background: linear-gradient(#e0e1e2, #fafefb);
+}
+
 .headerLogo{
     height:33px;
     margin-top:3px
